dos enlaces de api

--- a/proyecto final html/html/api.html
+++ b/proyecto final html/html/api.html
@@ -7,6 +7,7 @@
 
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="api.css">
 
  
     
@@ -40,6 +41,16 @@
        </nav>
 
     </header>
+
+
+    <section>
+        <div>
+            <h1>busca aqui el listado sobre los perros que estan disponibles en adopcion</h1>
+
+        </div>
+    </section>
+
+
 
 
 
