cambios en el main

--- a/proyecto final html/html/api.html
+++ b/proyecto final html/html/api.html
@@ -46,7 +46,7 @@
     <section>
         <div>
             <h1>listado de animales  dispinibles para adoptar </h1>
-            <button id="btn-animales">Obtener animales nuevos </button>
+            <button id="btn-animales">Obtener la informacion de los animales disponibles en adopcion  </button>
           
             <p id="texto-animales">Presiona el botón para cargar la lista de animales animales ..</p>
             
