--- a/proyecto final html/html/contacto.html
+++ b/proyecto final html/html/contacto.html
@@ -24,7 +24,7 @@
         <div class="logo-lateral">
                     <ul>
                     
-                    <li><a class="donacion" href="dona.html">dona aqui</a></li>
+                    <li><a class="donacion" href="dona.html">Dona aqui</a></li>
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
@@ -47,9 +47,9 @@
     </header>
 
         <section class="formulario-contacto">
-            <h1>contactanos</h1>
+            <h1>Contactanos</h1>
             <p>
-                necesitas ayuda? o quieres un poco mas de informacion no dudes 
+                Necesitas ayuda? o quieres un poco mas de informacion no dudes 
                 en contactarnos
                 <br>
                 <br>
@@ -58,19 +58,19 @@
 
             </p>
 
-            <label for="nombre">ingresar tu nombre </label>
+            <label for="nombre">Ingresar tu nombre </label>
             <br>
             <input type="text" placeholder="nombre completo">
             <br>
             <br>
 
-            <label for="celular">ingresar tu numero de celular  </label>
+            <label for="celular">Ingresar tu numero de celular  </label>
             <br>
             <input type="tel" placeholder="celular">
             <br>
             <br>
 
-            <label for="tipo de identificacion">elija que tipo de identificaciones  </label>
+            <label for="tipo de identificacion">Elija que tipo de identificaciones  </label>
             <br>
             <select name="select" seleccione>
                 <option value="1">seleccione</option>
@@ -83,13 +83,13 @@
             <br>
             <br>
 
-            <label for="identificacion">ingresar tu numero de identificacion  </label>
+            <label for="identificacion">Ingresar tu numero de identificacion  </label>
             <br>
             <input type="text" placeholder="numero de indenficacion">
             <br>
             <br>
 
-            <button type="submit">enviar</button> <br>
+            <button type="submit">Enviar</button> <br>
             <br> <button type="submit">cancelar</button>
         </section>
 
@@ -97,19 +97,19 @@
             <img class="imagen-conta" src="../imagenes/perro.png" alt="perro con el gato mirada tierna" title="perro y gato con una mirada tierna y sutil entre ellos ">
         </section>
 
-        <strong>no olvides que debes de estar registrador para enviar el formulario</strong>
+        <strong>No olvides que debes de estar registrador para enviar el formulario</strong>
 
         <footer>
-            <h3>contacto</h3>
-            <p>tel:406(658-927-07)</p>
+            <h3>Contacto</h3>
+            <p>Tel:406(658-927-07)</p>
                 <br>
-            <p>celular:3136616863</p>
+            <p>Eelular:3136616863</p>
                 <br>
-            <p>atencion a usuario:escribenos al celular</p>
+            <p>Atencion a usuario:escribenos al celular</p>
                 <br>
-            <p>correo electronico: bienestaranimal@hotmail.com</p>
+            <p>Correo electronico: bienestaranimal@hotmail.com</p>
                 <br>
-            <p>programadores: <br> Sharon Asprilla, Mateo Aguirre y Andres Bello</p>
+            <p>Programadores: <br> Sharon Asprilla</p>
         </footer>
 </body>
 </html>
