--- a/proyecto final html/html/reportes.html
+++ b/proyecto final html/html/reportes.html
@@ -25,7 +25,7 @@
         <div class="logo-lateral">
                     <ul>
                     
-                    <li><a class="donacion" href="dona.html">dona aqui</a></li>
+                    <li><a class="donacion" href="dona.html">Dona aqui</a></li>
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
@@ -48,7 +48,7 @@
     </header>
 
         <section class="formulario-contacto">
-            <h1>reportes</h1>
+            <h1>Reportes</h1>
             <p>
                 danos una breve descripcion
                 <br>
@@ -85,19 +85,19 @@
             <img class="imagen-conta" src="../imagenes/perro.png" alt="perro con el gato mirada tierna" title="perro y gato con una mirada tierna y sutil entre ellos ">
         </section>
 
-        <strong>no olvides que debes de estar registrador para enviar el formulario</strong>
+        <strong>No olvides que debes de estar registrador para enviar el formulario</strong>
 
         <footer>
-            <h3>contacto</h3>
-            <p>tel:406(658-927-07)</p>
+            <h3>Contacto</h3>
+            <p>Tel:406(658-927-07)</p>
                 <br>
-            <p>celular:3136616863</p>
+            <p>Celular:3136616863</p>
                 <br>
-            <p>atencion a usuario:escribenos al celular</p>
+            <p>Atencion a usuario:escribenos al celular</p>
                 <br>
-            <p>correo electronico: bienestaranimal@hotmail.com</p>
+            <p>Correo electronico: bienestaranimal@hotmail.com</p>
                 <br>
-            <p>programadores: <br> Sharon Asprilla, Mateo Aguirre y Andres Bello</p>
+            <p>Programadores: <br> Sharon Asprilla</p>
         </footer>
     
 </body>
