--- a/proyecto final html/html/api.html
+++ b/proyecto final html/html/api.html
@@ -28,7 +28,7 @@
         <div class="logo-lateral">
                     <ul>
                     
-                    <li><a class="donacion" href="dona.html">dona aqui</a></li>
+                    <li><a class="donacion" href="dona.html">Dona aqui</a></li>
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
@@ -45,7 +45,7 @@
 
     <section>
         <div>
-            <h1>listado de animales  dispinibles para adoptar </h1>
+            <h1>Listado de animales  dispinibles para adoptar </h1>
             <button id="btn-animales">Obtener la informacion de los animales disponibles en adopcion  </button>
           
             <p id="texto-animales">Presiona el botón para cargar la lista de animales animales ..</p>
