--- a/proyecto final html/html/inicio.html
+++ b/proyecto final html/html/inicio.html
@@ -23,7 +23,7 @@
         <div class="logo-lateral">
                     <ul>
                     
-                    <li><a class="donacion" href="dona.html">dona aqui</a></li>
+                    <li><a class="donacion" href="dona.html">Dona aqui</a></li>
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
@@ -49,7 +49,7 @@
     <main class="contenido">
             <section class="iniciar">
                 <h2>Bienvenid@s al ricon de los adorables </h2>
-                <p class="comentario">conoce como ayudarlos conllevando a una mejor calidad de vida
+                <p class="comentario">Conoce como ayudarlos conllevando a una mejor calidad de vida
                     ¡juntos podemos cambiar vidas! 
 
                     <br>
@@ -164,7 +164,7 @@
 
    <iframe src="https://elirreverenteibague.com/noticia/2530200/gatito-que-estaba-desaparecido-resulto-atropellado-en-el-barrio-la-gaviota" width="100%" height="500px">noticia de un gato que perdio la vida</iframe>
 
-    <strong><u>no olvides registarte para llenar formularios e iniciar sesion para las actualizaciones</u></strong>
+    <strong><u>No olvides registarte para llenar formularios e iniciar sesion para las actualizaciones</u></strong>
    
         <footer>
             <h3>Contacto</h3>
@@ -182,7 +182,7 @@
                 <br>
             <p>Correo electronico: bienestaranimal@hotmail.com</p>
                 <br>
-            <p>Programadores: <br> Sharon Asprilla,<br> 
+            <p>Programadores: <br> Sharon Asprilla<br> 
                 
         </footer>
 
