--- a/proyecto final html/html/registrarte.html
+++ b/proyecto final html/html/registrarte.html
@@ -24,7 +24,7 @@
         <div class="logo-lateral">
                     <ul>
                     
-                    <li><a class="donacion" href="dona.html">dona aqui</a></li>
+                    <li><a class="donacion" href="dona.html">Dona aqui</a></li>
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
@@ -54,14 +54,14 @@
 
     <section>
         <div>
-            <h2>llena los campos, asegurate de no dejar campos vacios </h2>
+            <h2>Llena los campos, asegurate de no dejar campos vacios </h2>
         <br>
-        <p>digite sus documentos para luego ingresar ala plataforma</p>
+        <p>Digite sus documentos para luego ingresar ala plataforma</p>
         </div>
     </section>
 
 
-    <label for="formulario">fromulario</label>
+    <label for="formulario">Fomulario</label>
     <br>
     <input type="text" name="name" placeholder="nombre completo">
     <br>
@@ -108,7 +108,7 @@
                 <br>
             <p>Correo electronico: bienestaranimal@hotmail.com</p>
                 <br>
-            <p>Programadores: <br> Sharon Asprilla, Mateo Aguirre y Andres Bello</p>
+            <p>Programadores: <br> Sharon Asprilla</p>
         </footer>
     
 </body>
