--- a/proyecto final html/html/inicio.html
+++ b/proyecto final html/html/inicio.html
@@ -27,7 +27,7 @@
                    <li><a href="contacto.html">Contactanos</a></li>
                    <li><a href="animal.html">Animal </a></li>
                    <li><a href="atencion.html">Atencion veterinaria </a></li>
-                   <li><a href="api.html">api</a></li>
+                   <li><a href="api.html">Api</a></li>
                    
 
                     
