--- a/proyecto final html/html/api.html
+++ b/proyecto final html/html/api.html
@@ -40,8 +40,15 @@
 
     </header>
 
+    <section class="user-card-section">
+        <div class="user-card">
+            <img src="../imagenes/foto de perfil y hojas de vida.png" alt="Foto de perfil">
+            <p>Sharon Saray Asprilla Cordoba</p>
+            <button id="show-api-btn">Ver más</button>
+        </div>
+    </section>
 
-    <section>
+    <section id="api-section" style="display: none;">
         <div>
             <h1>Listado de razas  dispinibles para adoptar </h1>
             <button id="btn-animales">Obtener la informacion de las razas disponibles en adopcion  </button>
