--- a/proyecto final html/html/atencion.html
+++ b/proyecto final html/html/atencion.html
@@ -58,7 +58,7 @@
 
             </p>
 
-            <label for="nombre">Ingresar tu nombre </label>
+            <label for="nombre">Ingresar el nombre de la persona que lo esta registrado </label>
             <br>
             <input type="text" placeholder="nombre completo">
             <br>
@@ -78,7 +78,7 @@
             <br>
             <br>
 
-             <label for="diagnostico"> Diagnostico</label>
+             <label for="diagnostico"> Pre diagnostico</label>
             <br>
             <input type="text" placeholder="diagnostico">
             <br>
@@ -90,7 +90,7 @@
             <br>
             <br>
 
-             <label for="nombre">Nombre del veterinario responsable</label>
+             <label for="nombre">Nombre del veterinario que lo atiende </label>
             <br>
             <input type="text" placeholder="nombre del veterinario">
             <br>
@@ -104,7 +104,7 @@
             <img class="imagen-conta" src="../imagenes/perro.png" alt="perro con el gato mirada tierna" title="perro y gato con una mirada tierna y sutil entre ellos ">
         </section>
 
-        <strong>No olvides que debes de estar registrador para enviar el formulario</strong>
+        <strong>No olvides que debes de estar registrador para poder enviar el formulario</strong>
 
         <footer>
             <h3>Contacto</h3>
