--- a/proyecto final html/html/dona.html
+++ b/proyecto final html/html/dona.html
@@ -69,7 +69,7 @@
     <br>
 
 
-    <label for="tipo de donacion">Que vas a donar?</label> <br>
+    <label for="tipo de donacion">Que deseas  a donar?</label> <br>
     <input type="text"  placeholder="ejemplo:dinero,alimentos,etc">
     <br>
     <br>
@@ -78,7 +78,7 @@
     
     </section>
 
-     <strong><u>No olvides registarte para llenar formularios e iniciar sesion para las actualizaciones</u></strong>
+     <strong><u>No olvides registarte para enviar formularios e iniciar sesion para las actualizaciones</u></strong>
 
 
     
